force-app/main/default/objects/Tripulacao__c/Tripulacao__c.object-meta.xml
<CustomObject>
    <label>Tripulação</label>
    <nameField>
        <displayFormat>TR-{000000}</displayFormat>
        <label>Nome de Tripulação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tripulação</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>