force-app/main/default/objects/Tripulacao__c/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <label>Cargo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CargoFuncionario</valueSetName>
    </valueSet>
</CustomField>