force-app/main/default/objects/Tripulacao__c/fields/IdComposto__c.field-meta.xml
<CustomField>
    <fullName>IdComposto__c</fullName>
    <externalId>true</externalId>
    <label>IdComposto</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>