force-app/main/default/objects/Tripulacao__c/fields/Trecho__c.field-meta.xml
<CustomField>
    <fullName>Trecho__c</fullName>
    <label>Trecho</label>
    <referenceTo>Trecho__c</referenceTo>
    <relationshipLabel>Tripulação</relationshipLabel>
    <relationshipName>TripulacaoTrecho</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>