force-app/main/default/objects/Tripulacao__c/fields/Tripulante__c.field-meta.xml
<CustomField>
    <fullName>Tripulante__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tripulante</label>
    <referenceTo>Funcionario__c</referenceTo>
    <relationshipLabel>Tripulação</relationshipLabel>
    <relationshipName>TripulacaoTripulante</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>